src/test/deca/context/invalid/provided/testi38.deca
//Resultats :
//Erreur contextuelle
//Ligne 12 : A method is called by a non class type
class A{
    protected int x;
    int getX(){
        return x;
    }
}
{
    float b;
    int x = b.getX();
}